
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int vm_offset_t ;
struct uio {int uio_iovcnt; scalar_t__ uio_resid; int uio_rw; struct thread* uio_td; int uio_segflg; int uio_offset; struct iovec* uio_iov; } ;
struct thread {int dummy; } ;
struct proc {int dummy; } ;
struct iovec {size_t iov_len; scalar_t__ iov_base; } ;
typedef scalar_t__ ssize_t ;
typedef enum uio_rw { ____Placeholder_uio_rw } uio_rw ;
typedef scalar_t__ caddr_t ;


 int MPASS (int) ;
 size_t SSIZE_MAX ;
 int UIO_SYSSPACE ;
 int proc_rwmem (struct proc*,struct uio*) ;

__attribute__((used)) static ssize_t
proc_iop(struct thread *td, struct proc *p, vm_offset_t va, void *buf,
    size_t len, enum uio_rw rw)
{
 struct iovec iov;
 struct uio uio;
 ssize_t slen;

 MPASS(len < SSIZE_MAX);
 slen = (ssize_t)len;

 iov.iov_base = (caddr_t)buf;
 iov.iov_len = len;
 uio.uio_iov = &iov;
 uio.uio_iovcnt = 1;
 uio.uio_offset = va;
 uio.uio_resid = slen;
 uio.uio_segflg = UIO_SYSSPACE;
 uio.uio_rw = rw;
 uio.uio_td = td;
 proc_rwmem(p, &uio);
 if (uio.uio_resid == slen)
  return (-1);
 return (slen - uio.uio_resid);
}
